<resources>
    <string name="app_name">AppSultan</string>
    <string name="password">Senha</string>
    <string name="username">Usuário</string>
    <string name="login">Login</string>
    <string name="signup">Inscrever-se</string>
    <string name="perfilTitle">Perfil</string>
    <string name="forget_password">Esqueci a senha</string>
    <string name="imagem_perfil">Imagem Perfil</string>
    <string name="Perfil_namo">Mohammed</string>
    <string name="Perfil_e_mail">mohammed@sultam.com</string>
    <string name="adress">Endereço</string>
    <string name="edit">Editar</string>
    <string name="requests">Pedidos</string>
    <string name="cancel_reset">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="carrinho">Carrinho</string>
    <string name="Tapete">Tapete</string>
    <string name="total">Total:</string>
    <string name="precoTotal">R$ 000.00</string>
    <string name="cancel">Cancelar Pedido</string>
    <string name="confirma">Confirmar Pedido</string>
    <string name="name">Name</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="usu_rio">Usuário:</string>
    <string name="digite_seu_usu_rio">Digite seu usuário</string>
    <string name="senha">Senha:</string>
    <string name="confirme_sua_senha">Confirme sua senha:</string>
    <string name="cpf">CPF</string>
    <string name="digite_seu_cpf">Digite seu CPF</string>
    <string name="digite_sua_usu_senha" />
    <string name="email">E-mail</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="entre_novamente_com_senha">Entre novamente com senha</string>
    <string name="entre_novamente_sua_senha" />
    <string name="cancelar">Cancelar</string>
    <string name="catalogo">catalogo</string>
    <string name="SearchFiltro">Filtro</string>
    <string name="Catalogo">Catalogo</string>
    <string name="finalizar_pedido">Finalizar Pedido</string>
    <string name="lucro">Lucro</string>
    <string name="continuar">Continuar</string>
    <string name="preco">Preço</string>
    <string name="car">Adicionar ao Carrinho</string>
    <string name="sair">Sair</string>
    <string name="info_edit">Editar informações</string>
    <string name="para_resetar_sua_senha_entre_com_email_no_campo_abaixo">Para resetar sua senha entre com email, no campo abaixo:</string>
    <string name="resetar_senha">resetar senha</string>
</resources>
