<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:background="@color/sultanGrayColor">
    <ImageButton
        android:id="@+id/backButton"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="77dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/sultanGrayColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textLabelCarrinho"
        android:layout_width="109dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/carrinho"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/sultanColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />


    <GridLayout
        android:id="@+id/ResumeArea"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:background="#C0BEC3"
        android:columnCount="2"
        android:columnOrderPreserved="true"
        android:padding="4dp"
        android:rowCount="6"
        app:layout_constraintBottom_toTopOf="@+id/barra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prodCarrinho">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="Produto" />

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="Desconto" />

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="Frete" />

        <TextView
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="Total" />

        <TextView
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/lucro" />

        <TextView
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="0,00" />

        <TextView
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="0,00" />

        <TextView
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="0,00" />

        <TextView
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="0,00" />

        <TextView
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="0,00" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="200dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_marginTop="20dp"
            android:backgroundTint="#BFCFFF"
            android:padding="10dp"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="200dp"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/sultanColor"
            android:padding="10dp"
            android:text="@string/finalizar_pedido"
            android:textColor="@color/sultanGrayColor" />
    </GridLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/barra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#514375"
        android:gravity="bottom"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonRequests"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/requests"
        android:textColor="#C0BEC3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barra"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonCart"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/carrinho"
        android:textColor="#C0BEC3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonRequests"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonCat"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/Catalogo"
        android:textColor="#C0BEC3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCart"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonProfile"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/perfilTitle"
        android:textColor="#C0BEC3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/barra"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonCat"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/prodCarrinho"
        android:layout_width="395dp"
        android:layout_height="324dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
